--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -1,4 +1,4 @@
-fr:
+fr-CA:
   activerecord:
     attributes:
       user:
@@ -32,41 +32,45 @@ fr:
       confirmed: Votre compte a été confirmé avec succès.
       new:
         resend_confirmation_instructions: Renvoyer les instructions de confirmation
-        resend_confirmation_instructions_short: Renvoyer
       send_instructions: Vous allez recevoir sous quelques minutes un courriel comportant des instructions pour confirmer votre compte.
       send_paranoid_instructions: Si votre courriel existe sur notre base de données, vous recevrez sous quelques minutes un message avec des instructions pour confirmer votre compte.
     failure:
       already_authenticated: Vous êtes déjà connecté(e).
       inactive: Votre compte n’est pas encore activé.
-      invalid: Courriel ou mot de passe incorrect.
+      invalid: "%{authentication_keys} ou mot de passe incorrect."
       last_attempt: Il vous reste une chance avant que votre compte soit bloqué.
       locked: Votre compte est verrouillé.
-      not_found_in_database: Courriel ou mot de passe incorrect.
+      not_found_in_database: "%{authentication_keys} ou mot de passe incorrect."
       timeout: Votre session est expirée, veuillez vous reconnecter pour continuer.
       unauthenticated: Vous devez vous connecter ou vous enregistrer pour continuer.
       unconfirmed: Vous devez confirmer votre compte par courriel.
     mailer:
       confirmation_instructions:
-        action: Confirmer mon courriel
-        greeting: Bienvenue !
-        instruction: 'Vous pouvez confirmer votre courriel grâce au lien ci-dessous:'
+        action: Confirmer mon addresse courriel
+        greeting: Bienvenue %{recipient} !
+        instruction: 'Vous pouvez confirmer votre addresse courriel grâce au lien ci-dessous :'
         subject: Instructions de confirmation
+      email_changed:
+        greeting: Bonjour %{recipient} !
+        message: Nous vous contactons pour vous notifier que votre adresse courriel a été changée en %{email}.
+        message_unconfirmed: Nous vous contactons pour vous notifier que votre adresse email est en train d'être changée pour %{email}.
+        subject: Addresse courriel modifiée
       password_change:
-        greeting: Bonjour !
+        greeting: Bonjour %{recipient} !
         message: Nous vous contactons pour vous notifier que votre mot de passe a été modifié.
-        subject: Mot de passe modifié.
+        subject: Mot de passe modifié
       reset_password_instructions:
         action: Changer mon mot de passe
-        greeting: Bonjour !
+        greeting: Bonjour %{recipient} !
         instruction: 'Quelqu''un a demandé un lien pour changer votre mot de passe, le voici :'
         instruction_2: Si vous n'avez pas émis cette demande, merci d'ignorer ce courriel.
         instruction_3: Votre mot de passe ne changera pas tant que vous n'aurez pas cliqué sur ce lien et renseigné un nouveau mot de passe.
         subject: Instructions pour changer le mot de passe
       unlock_instructions:
         action: Débloquer mon compte
-        greeting: Bonjour !
-        instruction: 'Suivez ce lien pour débloquer votre compte:'
-        message: Votre compte a été bloqué suite à un nombre d'essais de connexions manquées trop important
+        greeting: Bonjour %{recipient} !
+        instruction: 'Suivez ce lien pour débloquer votre compte :'
+        message: Votre compte a été bloqué suite à un nombre d'essais de connexions manquées trop important.
         subject: Instructions pour déverrouiller le compte
     omniauth_callbacks:
       failure: 'Nous ne pouvons pas vous authentifier depuis %{kind} pour la raison suivante : ''%{reason}''.'
@@ -79,7 +83,7 @@ fr:
         new_password: Nouveau mot de passe
       new:
         forgot_your_password: Mot de passe oublié ?
-        send_me_reset_password_instructions: Réinitialiser
+        send_me_reset_password_instructions: Envoyez-moi des instructions pour réinitialiser mon mot de passe
       no_token: Vous ne pouvez pas accéder à cette page si vous n’y accédez pas depuis un courriel de réinitialisation de mot de passe. Si vous venez en effet d’un tel courriel, vérifiez que vous avez copié l’adresse URL en entier.
       send_instructions: Vous allez recevoir sous quelques minutes un courriel vous indiquant comment réinitialiser votre mot de passe.
       send_paranoid_instructions: Si votre courriel existe dans notre base de données, vous recevrez un lien vous permettant de récupérer votre mot de passe.
@@ -88,28 +92,27 @@ fr:
     registrations:
       destroyed: Au revoir ! Votre compte a été annulé avec succès. Nous espérons vous revoir bientôt.
       edit:
-        are_you_sure: "Êtes-vous sûr ?"
+        are_you_sure: Êtes-vous sûr ?
         cancel_my_account: Supprimer mon compte
         currently_waiting_confirmation_for_email: 'Confirmation en attente pour: %{email}'
         leave_blank_if_you_don_t_want_to_change_it: laissez ce champ vide pour le laisser inchangé
-        title: "Éditer %{resource}"
-        unhappy: 'Pas content '
+        title: Éditer
+        unhappy: Pas content ?
         update: Modifier
         we_need_your_current_password_to_confirm_your_changes: nous avons besoin de votre mot de passe actuel pour valider ces modifications
       new:
-        sign_up: Inscrivez-vous avec votre courriel
-        sign_up_short: M'inscrire
+        sign_up: Inscription
       signed_up: Bienvenue ! Vous vous êtes enregistré(e) avec succès.
       signed_up_but_inactive: Vous vous êtes enregistré(e) avec succès. Cependant, nous n’avons pas pu vous connecter car votre compte n’a pas encore été activé.
       signed_up_but_locked: Vous vous êtes enregistré(e) avec succès. Cependant, nous n’avons pas pu vous connecter car votre compte est verrouillé.
-      signed_up_but_unconfirmed: Un message avec un lien de confirmation vous a été envoyé par courriel. Veuillez suivre ce lien pour activer votre compte.
+      signed_up_but_unconfirmed: Un message avec un lien de confirmation vous a été envoyé par mail. Veuillez suivre ce lien pour activer votre compte.
       update_needs_confirmation: Vous avez modifié votre compte avec succès, mais nous devons vérifier votre nouvelle adresse de courriel. Veuillez consulter vos courriels et cliquer sur le lien de confirmation pour confirmer votre nouvelle adresse.
       updated: Votre compte a été modifié avec succès.
+      updated_but_not_signed_in: Votre compte a été mis à jour avec succès. Vous devez vous reconnecter car votre mot de passe a été modifié.
     sessions:
       already_signed_out: Déconnecté(e).
       new:
-        login: Se connecter
-        sign_in: Se connecter
+        sign_in: Connexion
       signed_in: Connecté(e) avec succès.
       signed_out: Déconnecté(e) avec succès.
     shared:
@@ -121,17 +124,15 @@ fr:
         sign_in: Connexion
         sign_in_with_provider: Connexion avec %{provider}
         sign_up: Inscription
-        log_in: Connexion
+      minimum_password_length:
+        one: "(%{count} caractère au moins)"
+        other: "(%{count} caractères au moins)"
     unlocks:
       new:
         resend_unlock_instructions: Renvoyer les instructions de déblocage
       send_instructions: Vous allez recevoir sous quelques minutes un courriel comportant des instructions pour déverrouiller votre compte.
       send_paranoid_instructions: Si votre courriel existe sur notre base de données, vous recevrez sous quelques minutes un message avec des instructions pour déverrouiller votre compte.
       unlocked: Votre compte a été déverrouillé avec succès. Veuillez vous connecter.
-    title_social_media_connect: "Connectez-vous avec"
-    info_social_media_connect: "La connexion avec Facebook ou Google sert strictement à l'authentification. Aucune information ne sera publiée en votre nom."
-    or: "ou"
-    char_min: "caractères minimum"
   errors:
     messages:
       already_confirmed: a déjà été confirmé(e)
@@ -140,5 +141,5 @@ fr:
       not_found: n’a pas été trouvé(e)
       not_locked: n’était pas verrouillé(e)
       not_saved:
-        one: 'Une erreur a empêché ce (cet ou cette) %{resource} d’être enregistré(e) :'
+        one: 'une erreur a empêché ce (cet ou cette) %{resource} d’être enregistré(e) :'
         other: "%{count} erreurs ont empêché ce (cet ou cette) %{resource} d’être enregistré(e) :"
